# dreamai

./: .cursorrules  .dreamai_format_presets.json  .gitignore  .sesskey  6d082703-f240-4a3c-860b-34cdf14687e8_1.0.json  EXP.ipynb  FORMULA_VALIDATION_SOLUTION.md  RFP.ipynb  ai_agent_demo.py  ai_exp.ipynb  all_ui.py  app.py  app_2.py  assertion_concept_prompt.json  assertion_concept_prompt.txt  burr_app.py  chat_prompt.yaml.j2  check_formula_length.py  complex_formula_builder_example.py  components_prompt.txt  context.json  core.html  create_test_charts.py  csv_ui.py  cursor_version.py  demo_validation.py  dialog_eng.txt  dialog_engineering_guide.md  dialog_example.ipynb  dockerfile  docs.md  example_charts.py  example_formatting.py  exp.py  fasthtml_docs.md  fin_tools.md  formula_building_demo.py  fuzzy_search.py  gemini_exp.py  inc.py  (+88 more)
.clinerules/workflows/: generate-toolset-from-markdown.md
DATA/: RAG_pipeline.docx
burr_app/: app.py  batch_app.py  fast_app.py  rag_app.py  ui.py
context_engineering/: basic_agent.py  bog.md  coc_tool_call.json  heroes.py  history_processors_blog.md  processed.md  processed_heroes.py  processed_tool_call.json  show_messages.py  simple.md  simple_message_history.md  threat_and_weapons.md  threat_and_weapons_message_history.md  with_coc.md  with_cod_message_history.md
dreamai/: ai.py  dialog.py  dialog_models.py  func_utils.py  imports.py  lance_utils.py  md_utils.py  prompt.py  rag.py  rag_utils.py  response_actions.py  routing_actions.py  search_actions.py  settings.py  templates.py  utils.py
finn/: README.md  fin_tools.md  finn_deps.py  gradio_ui.py  ltv_cac_scenario.md  ltv_prompt.md  ltv_res.md  test_ui.py  toolset_agent.py
logs/: 2024-08-04T13-56-24+05-00_security-guide_fJhSsaGHS3tgWucpW86jkW.json  2024-08-04T13-56-27+05-00_security-guide_3u35Mds9drDm9VHiZfzjrk.json
rag_data/: finance.txt
rfp_project/: task.md
(+123 files in other folders)
