[project]
name = "dreamai"
version = "4.2.7"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "HamzaFarhan", email = "thehamza96@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "docstring-parser>=0.16",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "logfire[httpx]>=3.24.2",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "polars>=1.32.2",
    "pydantic-ai>=0.7.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
